Revert "remove platform selector on mobile (bug 1205141)"
This reverts commit 88693cc14d73b139ff549875ab11aff870328181.

--- a/src/media/css/compat-filter.styl
+++ b/src/media/css/compat-filter.styl
@@ -1,16 +1,13 @@
 @import "lib";
 
-
-body[data-platform="desktop"] {
-  [data-page-type~="app-list"],
-  [data-page-type~="collection-landing"],
-  [data-page-type~="editorial-landing"],
-  [data-page-type~="shelf-landing"],
-  [data-page-type~="homepage"] {
-      .compat-filter {
-          display: block;
-      }
-  }
+[data-page-type~="app-list"],
+[data-page-type~="collection-landing"],
+[data-page-type~="editorial-landing"],
+[data-page-type~="shelf-landing"],
+[data-page-type~="homepage"] {
+    .compat-filter {
+        display: block;
+    }
 }
 
 .compat-filter {
